style: Updated folder selection styles to enhance UI/UX.

--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
   <h1>Blank Remover</h1>
 
   <div class="path-container">
-    <div>Project Folder:</div>
-    <div id="projectName">Project Name</div>
-    <button id="selectProject">Select</button>
-    <button id="saveProject" disabled>Save</button>
+    <div class="folder-name">
+      <div class="title">Project Folder:</div>
+      <div id="projectName">Select project folder...</div>
+    </div>
+    <div class="button-box">
+      <button id="selectProject">Select</button>
+      <button id="saveProject" disabled>Save</button>
+    </div>
   </div>
 
   <div class="path-container">
-    <div>Box Folder:</div>
-    <div id="currentBox">Box Number</div>
+    <div class="one-line-folder-name">
+      <div class="title">Box Folder:</div>
+      <div id="currentBox">Select box folder...</div>
+    </div>
     <button id="selectBox">Select</button>
   </div>
 
